--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <section class="preview">
       <div class="row">
         <label><input type="radio" name="viewMode" value="vector" checked> Vector Preview</label>
-        <label><input type="radio" name="viewMode" value="image"> Image Preview Mode</label>
+        <label><input type="radio" name="viewMode" value="image"> Image Preview Mode</label><span class="hint" style="margin-left:8px">Auto‑masks for Aquila photo (no painting needed)</span>
       </div>
       <div class="row" id="imageControls" style="display:none">
         <button id="loadSample">Load sample Aquila photo</button>
