--- a/index.html
+++ b/index.html
@@ -1,20 +1,128 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Imperator Bows — Wood Swatches</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <title>Imperator Bows — Wood Swatch Configurator</title>
+  <meta name="theme-color" content="#66023C">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="apple-touch-icon" href="icons/icon-192.png">
+  <link rel="stylesheet" href="style.css?v=wx2">
 </head>
 <body>
-<header class="topbar">
-  <div class="brand">
-    <img class="coin" src="icons/medallion.png?v=6" alt="Imperator Bows medallion">
-    <div class="titles">
-      <h1>Imperator Bows</h1>
-      <h2>Wood Swatch Configurator</h2>
+  <header class="topbar">
+    <div class="brand">
+      <div class="coin"></div>
+      <div class="titles">
+        <h1>Imperator Bows</h1>
+        <h2>Wood Swatch Configurator</h2>
+      </div>
     </div>
-  </div>
-</header>
+    <button id="installBtn" class="btn ghost" hidden>Install App</button>
+  </header>
+
+  <section class="hero">
+    <div class="hero-content container">
+      <h1 class="hero-title">Design your bow’s look</h1>
+      <p class="hero-sub">Preview riser, limb, and overlay materials on real photos — Aquila, Praetorian, and Acies Triplex.</p>
+      <a href="#configurator" class="btn primary">Start configuring</a>
+    </div>
+    <img class="wave" src="assets/hero-wave.svg" alt="" aria-hidden="true">
+  </section>
+
+  <main id="configurator" class="container grid two-col gap-lg">
+    <section class="card panel elevate">
+      <h3 class="section-title">1) Bow Model</h3>
+      <div class="row">
+        <select id="modelSelect" class="input">
+          <option value="Aquila">Aquila — Compact Recurve</option>
+          <option value="Praetorian">Praetorian — Hybrid Longbow</option>
+          <option value="Acies Triplex">Acies Triplex — 3-Piece Recurve</option>
+        </select>
+      </div>
+
+      <h3 class="section-title">2) Choose Materials</h3>
+      <div class="swatch-grid">
+        <div class="swatch-block card elevate-sm">
+          <h4>Riser — Grip</h4>
+          <div class="picker" data-target="riserGrip"></div>
+        </div>
+        <div class="swatch-block card elevate-sm">
+          <h4>Riser — Back</h4>
+          <div class="picker" data-target="riserBack"></div>
+        </div>
+        <div class="swatch-block card elevate-sm">
+          <h4>Limbs</h4>
+          <div class="picker" data-target="limbs"></div>
+        </div>
+        <div class="swatch-block card elevate-sm">
+          <h4>Riser Overlays</h4>
+          <div class="picker" data-target="overlayRiser"></div>
+        </div>
+        <div class="swatch-block card elevate-sm">
+          <h4>Tip Overlays</h4>
+          <div class="picker" data-target="overlayTip"></div>
+        </div>
+      </div>
+
+      <details class="customize">
+        <summary>Add your own swatch</summary>
+        <div class="add-form">
+          <input id="newName" class="input" placeholder="Wood/Material name (e.g., Bocote dark)">
+          <input id="newHex"  class="input" placeholder="#RRGGBB">
+          <select id="newCategory" class="input">
+            <option value="riserGrip">Riser — Grip</option>
+            <option value="riserBack">Riser — Back</option>
+            <option value="limbs">Limbs</option>
+            <option value="overlayRiser">Riser Overlays</option>
+            <option value="overlayTip">Tip Overlays</option>
+          </select>
+          <button id="addSwatch" class="btn">Add</button>
+        </div>
+      </details>
+
+      <h3 class="section-title">3) Save/Load</h3>
+      <div class="row">
+        <input id="buildName" class="input" placeholder="Build name (e.g., Aquila—Kingwood/Osage)">
+      </div>
+      <div class="row">
+        <button id="saveBuild" class="btn">Save to device</button>
+        <button id="loadBuild" class="btn">Load…</button>
+        <button id="exportJSON" class="btn ghost">Export JSON</button>
+        <input id="importJSON" type="file" accept="application/json">
+      </div>
+      <p class="hint">Builds save to your device only. Export to share.</p>
+    </section>
+
+    <section class="card preview elevate">
+      <div class="row align-center">
+        <label class="radio"><input type="radio" name="viewMode" value="vector" checked> Vector Preview</label>
+        <label class="radio"><input type="radio" name="viewMode" value="image"> Image Preview Mode</label>
+        <span class="hint">Auto‑masks for Aquila photo (no painting)</span>
+        <div class="spacer"></div>
+        <button id="downloadPNG" class="btn small">Download PNG</button>
+      </div>
+      <div class="row" id="imageControls" style="display:none">
+        <button id="loadSample" class="btn small">Load sample Aquila photo</button>
+        <input id="uploadPhoto" class="input" type="file" accept="image/*">
+      </div>
+      <div class="canvas-wrap">
+        <canvas id="previewCanvas" width="900" height="600" aria-label="Bow preview"></canvas>
+      </div>
+      <details class="mt-md">
+        <summary>Legend</summary>
+        <ul class="legend" id="legendList"></ul>
+      </details>
+    </section>
+  </main>
+
+  <footer class="foot">
+    <div class="container">
+      <small>© Imperator Bow Company, Ltd. Co.</small>
+    </div>
+  </footer>
+
+  <script src="app.js"></script>
 </body>
 </html>
