--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="apple-touch-icon" href="icons/icon-192.png">
-  <link rel="stylesheet" href="style.css?v=wx3">
+  <link rel="stylesheet" href="style.css?v=wx4">
 </head>
 <body>
   <header class="topbar">
@@ -28,12 +28,18 @@
     <button id="installBtn" class="btn ghost" hidden>Install App</button>
   </header>
 
-  <section class="hero">
+  <section class="hero hero--medallion">
     <div class="hero-content container">
       <span class="badge">Hand‑made in Texas</span>
       <h1 class="hero-title">Design your bow’s look</h1>
       <p class="hero-sub">Preview riser, limb, and overlay materials on real photos — Aquila, Praetorian, and Acies Triplex.</p>
-      <a href="#configurator" class="btn primary">Start configuring</a>
+      <div class="hero-cta">
+        <a href="#configurator" class="btn primary">Start configuring</a>
+        <a href="#lead" class="btn">Ask a question</a>
+      </div>
+    </div>
+    <div class="hero-medallion">
+      <img src="icons/medallion-hero.png" alt="Imperator Bows medallion">
     </div>
     <img class="wave" src="assets/hero-wave.svg" alt="" aria-hidden="true">
   </section>
@@ -124,70 +130,25 @@
     </section>
   </main>
 
-  <!-- Gallery -->
-  <section id="gallery" class="gallery container">
-    <h2 class="block-title">Gallery</h2>
-    <p class="block-sub">Recent builds and finish examples.</p>
-    <div class="grid gallery-grid">
-      <figure class="gcard">
-        <div class="ph ph1"></div>
-        <figcaption>Aquila • Kingwood & Osage</figcaption>
-      </figure>
-      <figure class="gcard">
-        <div class="ph ph2"></div>
-        <figcaption>Praetorian • Spalted Tamarind</figcaption>
-      </figure>
-      <figure class="gcard">
-        <div class="ph ph3"></div>
-        <figcaption>Acies Triplex • Desert Ironwood</figcaption>
-      </figure>
-      <figure class="gcard">
-        <div class="ph ph4"></div>
-        <figcaption>Aquila • Myrtle Burl</figcaption>
-      </figure>
-      <figure class="gcard">
-        <div class="ph ph5"></div>
-        <figcaption>Praetorian • Bocote</figcaption>
-      </figure>
-      <figure class="gcard">
-        <div class="ph ph6"></div>
-        <figcaption>Acies Triplex • FR‑4 Accents</figcaption>
-      </figure>
-    </div>
-  </section>
-
-  <!-- Testimonials -->
-  <section id="testimonials" class="testimonials container">
-    <h2 class="block-title">What archers say</h2>
-    <div class="grid t-grid">
-      <blockquote class="tcard">
-        <p>“The Aquila points like a dream and the finish is flawless.”</p>
-        <footer>— J. Ramirez, TX</footer>
-      </blockquote>
-      <blockquote class="tcard">
-        <p>“My Praetorian is the smoothest longbow I’ve owned.”</p>
-        <footer>— A. Dunn, CO</footer>
-      </blockquote>
-      <blockquote class="tcard">
-        <p>“The Acies Triplex is perfect for travel—snaps together solid.”</p>
-        <footer>— S. Nguyen, WA</footer>
-      </blockquote>
-    </div>
-  </section>
-
-  <!-- CTA -->
-  <section class="cta">
-    <div class="container cta-inner">
-      <h2>Ready to spec your build?</h2>
-      <p>Pick your materials now or reach out for unique woods and inlays.</p>
-      <div class="row">
-        <a href="#configurator" class="btn primary">Open Configurator</a>
-        <a href="#contact" class="btn">Contact</a>
+  <!-- Lead form -->
+  <section id="lead" class="container lead card elevate">
+    <h2 class="block-title">Questions? Get a fast reply.</h2>
+    <p class="block-sub">Tell me about your bow idea and I’ll get back ASAP.</p>
+    <form id="leadForm" class="lead-form" method="POST">
+      <input type="hidden" id="FORMSPREE_ID" value=""> <!-- set to your Formspree ID like f/abcdwxyz -->
+      <div class="grid two">
+        <div><label>Name<input class="input" name="name" required></label></div>
+        <div><label>Email<input class="input" type="email" name="email" required></label></div>
       </div>
-    </div>
+      <label>Message<textarea class="input" name="message" rows="5" placeholder="Which woods are you considering?"></textarea></label>
+      <div class="row">
+        <button class="btn primary" type="submit">Send</button>
+        <span id="leadStatus" class="hint"></span>
+      </div>
+    </form>
   </section>
 
-  <!-- Contact Footer -->
+  <!-- Footer -->
   <footer id="contact" class="foot">
     <div class="container foot-inner">
       <div>
@@ -204,6 +165,34 @@
       </div>
     </div>
   </footer>
+
+  <script>
+  // Lead form handler: prefers Formspree if FORMSPREE_ID is set, otherwise falls back to mailto.
+  (function(){
+    const form = document.getElementById('leadForm');
+    const status = document.getElementById('leadStatus');
+    form.addEventListener('submit', async function(e){
+      e.preventDefault();
+      status.textContent = 'Sending…';
+      const id = (document.getElementById('FORMSPREE_ID').value || '').trim();
+      const data = new FormData(form);
+      const name = data.get('name'); const email = data.get('email'); const msg = data.get('message') || '';
+      if(id){
+        try{
+          const res = await fetch('https://formspree.io/' + id, { method:'POST', body:data, headers:{ 'Accept':'application/json' } });
+          if(res.ok){ status.textContent = 'Sent! I'll reply soon.'; form.reset(); }
+          else{ status.textContent = 'Could not send. Please email me directly.'; window.location.href = `mailto:imperatorbows@gmail.com?subject=New lead from ${encodeURIComponent(name)}&body=${encodeURIComponent(msg + "\n\nEmail: " + email)}`; }
+        }catch{
+          status.textContent = 'Network issue. Opening email…';
+          window.location.href = `mailto:imperatorbows@gmail.com?subject=New lead from ${encodeURIComponent(name)}&body=${encodeURIComponent(msg + "\n\nEmail: " + email)}`;
+        }
+      }else{
+        status.textContent = 'Opening your email app…';
+        window.location.href = `mailto:imperatorbows@gmail.com?subject=New lead from ${encodeURIComponent(name)}&body=${encodeURIComponent(msg + "\n\nEmail: " + email)}`;
+      }
+    });
+  })();
+  </script>
 
   <script src="app.js"></script>
 </body>
